# Sandra_ai

./: .env.example  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
sandra_ai/: config.py  db.py  main.py
sandra_ai/agent/: agent.py
sandra_ai/conversation_store/: conversation_store.py
sandra_ai/data_provider/: evauto.py
sandra_ai/mailing/: mailing.py
sandra_ai/models/: cars_model.py
sandra_ai/repositories/: cars_repository.py
tests/: test_main.py
