[tool.poetry]
name = "sandra-ai"
version = "0.1.0"
description = ""
authors = ["ghassen_chaabane <ghassen.chaabane@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
httpx = "^0.28.1"
openai = "^1.58.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
aiosqlite = "^0.20.0"
pydantic-settings = "^2.7.0"
fastapi-mail = "^1.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "N", "Q", "T"]
ignore = ["E501"]
